# Arabic-Handwritten-OCR

./: .gitignore  OCR_Model.ipynb  image_preprocessing.ipynb  pyproject.toml
