[tool.poetry]
name = "arabic-handwritten-ocr"
version = "0.1.0"
description = ""
authors = ["Liang Cheng <liangcheng@kl2tech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
opencv-python = "^4.8.1.78"
matplotlib = "^3.8.2"
opencv-contrib-python = "^4.8.1.78"
tensorflow = "^2.15.0"
pdf2image = "^1.16.3"
ipython = "^8.18.1"
tensorflow-macos = "^2.15.0"
keras-core = "^0.1.7"
keras = "2.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
